[agenda] fix time tool tip alignment for narrow rooms, fixes #189

--- a/src/pretalx/static/agenda/scss/_agenda.scss
+++ b/src/pretalx/static/agenda/scss/_agenda.scss
@@ -106,6 +106,7 @@
                             line-height: 1;
                             padding: 8px 16px;
                             top: -46px;
+                            white-space: nowrap;
                         }
 
                         &::after {
